MVP finished, needs messageUs functionality

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "BattleReadyBrushstrokes",
-  "name": "Create React App Sample",
+  "name": "Commission Miniature Painting",
   "icons": [
     {
       "src": "paint-brush.256x256.png",
